# hslu-wipro-smic

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml
api/api/: __main__.py  database.db
data/: database.db
data/ssl/: README.md
dataingress/: Dockerfile  pyproject.toml
dataingress/dataingress/: __main__.py  messagehandler.py
datastore/: pyproject.toml
datastore/datastore/: model.py
deployment/: config.yml  mosquitto.conf  nginx.conf
fakemeter/: README.md  pyproject.toml
fakemeter/data-examples/: E3DC-Export Oktober.csv
fakemeter/fakemeter/: __init__.py  __main__.py  send_recorded_data.py
tests/: README.md  conftest.py  pyproject.toml
tests/features/: assign-label.feature  assign_label.feature  publish-messages.feature  publish_messages.feature
tests/features/steps/: assign_label_steps.py  message_publishing_steps.py  test_assign_label_steps.py  test_publish_message.py  utils.py
tests/lib/: utils.py
web/: Dockerfile  package-lock.json  package.json
web/src/: App.tsx  Service.tsx  VoltageData.tsx  data.tsx
web/src/components/: PropsType.tsx  axis.tsx  baseChart.tsx  body.tsx  filter.tsx  graph._tsx  labelDetails.tsx  labels.tsx  lineChart.tsx  selectMeasurement.tsx  selectMeter.tsx  switchLabelMode.tsx  tooltip.tsx_  voltageGraph.tsx
web/src/components/charts/: Margin.tsx  SMICChart.tsx  Scales.tsx  SelectedRange.tsx  axis.tsx  baseChart.tsx  calcMinMax.tsx  getScales.tsx  lineChart.tsx  newChart.tsx  powerGraph.tsx  useCreateBase.tsx  useDrawAxis.tsx  useDrawLabels.tsx  useDrawLines.tsx  useSelectRangeWithDrag.tsx  voltageGraph.tsx
web/src/hooks/: interval.tsx  labels.tsx  meters.tsx  utils.tsx  windowDimensions.tsx
web/src/model/: Label.tsx  LabelAssignment.tsx  Line.tsx  Measurement.tsx  Meter.tsx  Point.tsx  PowerData.tsx  VoltageData.tsx  measurement.tsx
