[tool.poetry]
name = "dataingress"
version = "0.0.0"
description = "MQTT Data Ingress"
authors = ["Jonas Wyss", "Benj Fassbind"]

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.5.1"
datastore = "^0.3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
