[tool.poetry]
name = "hslu-smic-tests"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fakemeter = {path = "../fakemeter", develop = true}
requests = "^2.26.0"
pytest-bdd = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
